3 project details pages added and stype improvements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-
+    <link href="assets/img/icon.png" rel="icon">
+    <link href="assets/img/icon.png" rel="icon">
+  
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -51,9 +51,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
-        <a href="#hero" class="logo scrollto"
-          ><img src="assets/img/logo.png" alt="" class="img-fluid"
-        /></a>
+        <a href="#hero" class="logo scrollto">
+          <img src="assets/img/logo.png" alt="" class="img-fluid"/></a>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -242,7 +241,7 @@
               <h4>Alte Seiler Fatzer</h4>
               <p>Neubau Wohnüberbauung</p>
               <a href="assets/img/aktuelle-projekte/projekt1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Alte Seiler Fatzer"><i class="bx bx-search"></i></a>
-              <a href="projekt-details-1.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="AlteSeilerFatzer.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -252,7 +251,7 @@
               <h4>Bella Vista</h4>
               <p>Wohnbau in Neuenburg</p>
               <a href="assets/img/aktuelle-projekte/projekt2-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Bella Vista"><i class="bx bx-search"></i></a>
-              <a href="projekt-details-2.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="BellaVista.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -262,7 +261,7 @@
               <h4>Sursee</h4>
               <p>Sekundarschule Zirkusplatz</p>
               <a href="assets/img/aktuelle-projekte/projekt3-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Sekundarschule Zirkusplatz"><i class="bx bx-search"></i></a>
-              <a href="projekt-details-3.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Sursee.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
       </div>
@@ -310,9 +309,6 @@
                 <p>
                   Dolor sit amet consectetur adipiscing elit pellentesque
                   habitant morbi. Id interdum velit laoreet id donec ultrices.
-                  Fringilla phasellus faucibus scelerisque eleifend donec
-                  pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                  ultrices eros in cursus turpis massa tincidunt dui.
                 </p>
               </div>
             </li>
@@ -330,11 +326,7 @@
               <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                  sagittis orci. Faucibus pulvinar elementum integer enim. Sem
-                  nulla pharetra diam sit amet nisl suscipit. Rutrum tellus
-                  pellentesque eu tincidunt. Lectus urna duis convallis
-                  convallis tellus. Urna molestie at elementum eu facilisis sed
-                  odio morbi quis
+                  sagittis orci. Faucibus pulvinar elementum integer enim. 
                 </p>
               </div>
             </li>
@@ -353,9 +345,6 @@
                 <p>
                   Dolor sit amet consectetur adipiscing elit pellentesque
                   habitant morbi. Id interdum velit laoreet id donec ultrices.
-                  Fringilla phasellus faucibus scelerisque eleifend donec
-                  pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                  ultrices eros in cursus turpis massa tincidunt dui.
                 </p>
               </div>
             </li>
@@ -373,9 +362,7 @@
               <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Molestie a iaculis at erat pellentesque adipiscing commodo.
-                  Dignissim suspendisse in est ante in. Nunc vel risus commodo
-                  viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
-                  bibendum est. Purus gravida quis blandit turpis cursus in
+                  Dignissim suspendisse in est ante in.
                 </p>
               </div>
             </li>
@@ -394,12 +381,7 @@
               <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris
-                  vitae ultricies leo integer malesuada nunc vel. Tincidunt eget
-                  nullam non nisi est sit amet. Turpis nunc eget lorem dolor
-                  sed. Ut venenatis tellus in metus vulputate eu scelerisque.
-                  Pellentesque diam volutpat commodo sed egestas egestas
-                  fringilla phasellus faucibus. Nibh tellus molestie nunc non
-                  blandit massa enim nec.
+                  vitae ultricies leo integer malesuada nunc vel.
                 </p>
               </div>
             </li>
