partners section added with including styling and photos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/icon.png" rel="icon">
-    <link href="assets/img/icon.png" rel="icon">
+    <link href="assets/img/home/icon.png" rel="icon">
+    <link href="assets/img/home/icon.png" rel="icon">
   
     <!-- Google Fonts -->
     <link
@@ -52,7 +52,7 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
         <a href="#hero" class="logo scrollto">
-          <img src="assets/img/logo.png" alt="" class="img-fluid"/></a>
+          <img src="assets/img/home/logo.png" alt="" class="img-fluid"/></a>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -494,6 +494,44 @@
         </div>
       </section>
       <!-- End Team Section -->
+
+      <!-- ======= Partner Section ======= -->
+    <section id="partner" class="partner">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Partner</h2>
+          <h3>Unsere <span>Partner</span></h3>
+          <p><strong>Partnerschaft heisst Vertrauen - profitieren Sie davon</strong></p>
+          <p>Vernetzung und Zusammenarbeit sind wichtige Faktoren für den Erfolg und die Kompetenz einer
+            Organisation. Wir sind stolz und freuen uns, Ihnen nachfolgend unsere wichtigsten Partner vorstellen
+            zu dürfen.</p>
+        </div>
+
+        <div class="partner-logo">
+
+          <a href="https://www.christen-ag.ch/" target="_blank"><img src="/assets/img/partners/christen.png" alt="">
+          <h4>Christen AG</h4></a>
+
+          <a href="https://www.rustbau.ch/" target="_blank"><img src="/assets/img/partners/rust.png" alt="">
+          <h4>Rust + Co.</h4></a>
+
+          <a href="https://www.c-vanoli.ch/" target="_blank"><img src="/assets/img/partners/vanoli.png" alt="">
+            <h4>C. Vanoli AG</h4></a>
+
+          <a href="https://www.marti.com/ch_de/" target="_blank"><img src="/assets/img/partners/marti.png" alt="">
+          <h4>Marti AG</h4></a>
+
+          <a href="https://www.bolfing-ag.ch/de/" target="_blank"><img src="/assets/img/partners/bolfing.png" alt="">
+          <h4>Bolfing AG</h4></a>
+
+          <a href="https://www.estermann.ch/home" target="_blank"><img src="/assets/img/partners/esterman.png" alt="">
+          <h4>Estermann AG</h4></a>
+
+        </div>
+      </div>
+    </section> 
+    <!-- End Partner Section -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
