--- a/index.html
+++ b/index.html
@@ -267,233 +267,84 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-      <!-- ======= F.A.Q Section ======= -->
-      <section id="faq" class="faq">
-        <div class="container">
-          <div class="section-title">
-            <h2>F.A.Q</h2>
-            <h3>Frequently Asked <span>Questions</span></h3>
-          </div>
+       <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container">
 
-          <ul class="faq-list">
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                class="collapsed question"
-                href="#faq1"
-              >
-                Non consectetur a erat nam at lectus urna duis?
-                <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
-                  volutpat lacus laoreet non curabitur gravida. Venenatis lectus
-                  magna fringilla urna porttitor rhoncus dolor purus non.
-                </p>
-              </div>
-            </li>
-
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                href="#faq2"
-                class="collapsed question"
-              >
-                Feugiat scelerisque varius morbi enim nunc faucibus a
-                pellentesque? <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Id interdum velit laoreet id donec ultrices.
-                </p>
-              </div>
-            </li>
-
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                href="#faq3"
-                class="collapsed question"
-              >
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant
-                morbi? <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                  sagittis orci. Faucibus pulvinar elementum integer enim. 
-                </p>
-              </div>
-            </li>
-
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                href="#faq4"
-                class="collapsed question"
-              >
-                Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
-                <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Id interdum velit laoreet id donec ultrices.
-                </p>
-              </div>
-            </li>
-
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                href="#faq5"
-                class="collapsed question"
-              >
-                Tempus quam pellentesque nec nam aliquam sem et tortor
-                consequat? <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo.
-                  Dignissim suspendisse in est ante in.
-                </p>
-              </div>
-            </li>
-
-            <li>
-              <div
-                data-bs-toggle="collapse"
-                href="#faq6"
-                class="collapsed question"
-              >
-                Tortor vitae purus faucibus ornare. Varius vel pharetra vel
-                turpis nunc eget lorem dolor?
-                <i class="bi bi-chevron-down icon-show"></i
-                ><i class="bi bi-chevron-up icon-close"></i>
-              </div>
-              <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris
-                  vitae ultricies leo integer malesuada nunc vel.
-                </p>
-              </div>
-            </li>
-          </ul>
+        <div class="section-title">
+          <h2>Team</h2>
+          <h3>Unser <span>Team</span></h3>
+          <p>Sie sind nur einige von vielen erstaunlichen und talentierten Mitarbeitern unseres Unternehmens</p>
         </div>
-      </section>
-      <!-- End F.A.Q Section -->
 
-      <!-- ======= Team Section ======= -->
-      <section id="team" class="team">
-        <div class="container">
-          <div class="section-title">
-            <h2>Team</h2>
-            <h3>Our Hardworking <span>Team</span></h3>
-            <p>
-              Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-              adipisci expedita at voluptas atque vitae autem.
-            </p>
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/leo_armafix/" target="_blank"><i class="bi bi-instagram"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Leotrim Gashi</h4>
+                <span>Geschäftsführer</span>
+              </div>
+            </div>
           </div>
 
-          <div class="row">
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/toni_kraba/" target="_blank"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                </div>
+              <div class="member-info">
+                <h4>Toni Kraba</h4>
+                <span>Leiter Personal &amp; Disponent</span>
               </div>
             </div>
+          </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
+              <div class="member-info">
+                <h4>Nikoll Biblekaj</h4>
+                <span>Disponent</span>
+              </div>
             </div>
+          </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-              <div class="member">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-4.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
                 </div>
-                <div class="member-info">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
-                </div>
+              </div>
+              <div class="member-info">
+                <h4>Administation-Foto</h4>
+                <span>Accountant</span>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <!-- End Team Section -->
+      </div>
+    </section><!-- End Team Section -->
 
       <!-- ======= Partner Section ======= -->
     <section id="partner" class="partner">
@@ -645,102 +496,30 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Tempo</h3>
-              <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
-              </p>
-            </div>
+  <footer id="footer">
 
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
-                </li>
-              </ul>
-            </div>
+    <div class="container d-md-flex py-4">
 
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Our Services</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Web Development</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Graphic Design</a>
-                </li>
-              </ul>
-            </div>
+      <div class="me-md-auto text-center text-md-start">
+        
+        <div class="copyright"> 
+          <p>&copy; Copyright <strong><span>Armafix AG - 2023</span></strong>. All Rights Reserved
+        </p></div>
+        <div class="credits">
+          <p>Designed by <strong>ArditVezaj</strong></p>
+        </div>
 
-            <div class="col-lg-4 col-md-6 footer-newsletter">
-              <h4>Join Our Newsletter</h4>
-              <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
-              </p>
-              <form action="" method="post">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
-            </div>
-          </div>
+        <div class="footer-text">
         </div>
       </div>
 
-      <div class="container d-md-flex py-4">
-        <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">
-            &copy; Copyright <strong><span>Tempo</span></strong
-            >. All Rights Reserved
-          </div>
-        </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <p>Finden Sie uns auf:</p>
+          <a href="https://www.facebook.com/people/Armafix-AG/100054485138677/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
+    </div>
+  </footer><!-- End Footer -->
 
     <a
       href="#"
